# Balloon-Calculator

./: README.md  pyproject.toml
AtmosphereData/: AtmosphereDataStandardAtmosphere1976RawData.CSV  AtmosphereDataStandardAtmosphere1976RawData.xlsx
BalloonCalculator/: AtmosphereData.xlsx  README.docx
BalloonCalculator/AtmosphereData/: AtmosphereDataStandardAtmosphere1976.xlsx  AtmosphereRawData.CSV  AtmosphereRawData.xlsx
BalloonCalculator/src/BalloonCalc/: AtmosphereData.py  BalloonCalc.py  SphereCalc.py
BalloonCalculator/src/BalloonCalculator.egg-info/: entry_points.txt  top_level.txt
src/BalloonCalc/: CylinderCalc.py
src/BalloonCalculator.egg-info/: PKG-INFO  SOURCES.txt
test/BalloonCalc/: AtmosphereData_test.py
