[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "BalloonCalculator"
version = "0.5.0"
dependencies = [

]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]

[project.scripts]
balloon-calculator = "BalloonCalc.BalloonCalc:main"


